website/css/styles.css
/* ... */
.icon-button:hover {
    background: var(--box-shadow-color); /* Altera a cor de fundo ao passar o mouse */
}


p, ul {
    font-size: 16px;
    line-height: 1.6;
}


section {
    padding: 50px 10%;
    display: flex;
    justify-content: center; /* Espaça as colunas à esquerda e à direita */
    gap: 1rem; /* Espaço entre as colunas */
    flex-wrap: nowrap; /* Impede que as colunas quebrem linha */
}

/* Coluna do título */
.section-title {
    flex: 0 0 30%; /* Fixa em 40% da largura do container */
    max-width: 30%; /* Limita a largura da coluna */
    max-width: 350px; /* Limita a largura da coluna */
}

/* Coluna do conteúdo */
.section-content {
    flex: 0 0 70%; /* Fixa em 60% da largura do container */
    max-width: 70%; /* Limita a largura da coluna */
    max-width: 750px; /* Limita a largura da coluna */

}

table {
    width: 100%;
    border-collapse: collapse;
    color: var(--font-color);
    text-align: left;
    font-family: Arial, sans-serif;
    background-color: transparent;
}

thead {
    font-weight: bold;
}

tbody tr:nth-child(odd) {
    background-color: var(--table-light); /* Cor de fundo para linhas ímpares */
}

tbody tr:nth-child(even) {
    background-color: var(--table-dark); /* Cor de fundo para linhas pares */
}

td, th {
    padding: 10px;
    border-top: 1px solid white;
    border-bottom: 1px solid white;
    font-size: 14px;
}

tbody tr td {
    border-left: none;
    border-right: none;
}

ul {
    padding: 0;
    list-style-type: none;
}

/* Classes */
.no-margin {
    margin: 0;
}

.regular {
    font-weight: 400;
}

.semi-bold {
    font-weight: 500;
}

.bold {
    font-weight: 700;
}

.grey-text {
    color: var(--light-gray);
}

.white-text {
    color: var(--font-color);
}

/* Article-card title */
.article-card h3 {
    cursor: pointer;
    color: var(--light-gray);   
}

.article-card h3:hover {
    color: var(--hyperlink-blue);
}

.article-card a {
    color: var(--hyperlink-blue);
    text-decoration: underline;
    cursor: pointer;
}

.article-card p {
    margin-top: 5px;
}

/* Especificamente para os links (botões de zoom e de controle) */
.leaflet-control-zoom-in span, .leaflet-control-zoom-out span, .leaflet-popup-content b{
    color: black !important; /* Define a cor dos links (botões) */
}

/* Modal Styles */
.modal {
    display: none;
    position: fixed;
    z-index: 100;
    padding-top: 100px;
    padding-bottom: 100px;
    left: 0;
    top: 0;
    width: 100%;
    height: 85%;
    background-color: var(--modal-overlay);
    align-items: center;
    justify-content: center;
    overflow-y: auto;
}

.modal-content {
    margin: auto;
    padding: 20px;
    border: 2px solid var(--light-gray);
    border-radius: 10px;
    width: 60%;
    max-width: 800px;
    background-color: var(--navy-blue);
    color: var(--light-gray);
    box-shadow: var(--box-shadow-color) 0px 4px 8px 0px;
}

pre {
    white-space: pre-wrap; /* Wraps long lines */
    word-wrap: break-word; /* Breaks long words */
    max-width: 100%; /* Ensure it doesn’t exceed its container */
}

.publication-title {
    color: var(--hyperlink-blue) !important;
}

.publication-title:hover {
    text-decoration: underline;
}

.article-card {
    margin-top: 30px;
    margin-bottom: 20px;
}

.article-card h3 {
    margin-bottom: 0;
}

.biography-text {
    margin-top: 0;
}

.cite-link, .doc-link {
    display: inline-block;
    padding: 6px 8px;
    margin: 5px 3px;
    font-family: Arial, sans-serif;
    font-size: 9px;
    color: var(--hyperlink-blue);
    text-decoration: none !important;
    background-color: transparent;
    border: 1px solid var(--hyperlink-blue);
    border-radius: 4px;
    transition: all 0.3s ease;
}

.cite-link:hover, .doc-link:hover {
    color: var(--font-color);
    background-color: var(--hyperlink-blue);
}

.close {
    color: var(--light-gray);
    float: right;
    font-size: 28px;
    cursor: pointer;
}

.close:hover,
.close:focus {
    color: var(--hyperlink-blue);
    text-decoration: none;
}

.modal a {
    color: var(--hyperlink-blue);
    text-decoration: underline;
    cursor: pointer;
}

.modal a:hover {
    color: var(--hyperlink-blue);
    text-decoration: none;
}

.nav-permanent {
    font-size: 1.5rem; /* Tamanho maior para o título */
    margin: 0 20px 0 0; /* Espaçamento do título para os links */
    font-weight: bold;
    color: var(--font-color);
    flex-shrink: 0; /* Não deixa o título encolher */
    text-decoration: none; /* Remove o sublinhado */
}

.table-container {
    width: 100%;
    overflow-x: auto; /* Adiciona rolagem horizontal apenas no contêiner da tabela */
    -webkit-overflow-scrolling: touch; /* Permite rolagem suave em dispositivos móveis */
}

/* ID's */

#contact-email, #contact-address {
    margin: 10px 0;
}

/* Remove o marcador padrão */
#education-list {
    list-style: none; /* Remove os bullets (discos) padrão */
    padding-left: 0; /* Remove o espaçamento à esquerda */
}

#education-list li {
    position: relative; /* Torna o li relativo para posicionar o ícone */
    margin-bottom: 15px; /* Espaçamento entre os itens da lista */
    padding-left: 30px; /* Espaçamento à esquerda para o ícone */
}

/* Adiciona o ícone de chapéu de formatura antes de cada item */
#education-list li::before {
    content: "\f19d"; /* Código unicode do chapéu de formatura (Font Awesome) */
    font-family: "Font Awesome 5 Free";
    font-weight: 900; /* Garante que o ícone use a versão sólida */
    position: absolute;
    left: 0;
    top: 0;
    font-size: 1.2rem; /* Ajuste o tamanho do ícone */
    color: var(--white);
}

#education-list li p {
    margin: 0; /* Espaçamento entre os itens da lista */
}

#education-list li .education-institution {
    font-size: 16px;
}
    
#interests-list {
    list-style-type: disc;
    padding-left: 30px;
    line-height: 1.8;
}

#contact-map {
    height: 300px;
    color: var(--black);
}

#name, #title, #affiliation {
    margin: 5px 0px;
}
/* ... */

